--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
  <title>Document</title>
 </head>
 <body>
- <nav>
-  <header>
-   <h1>main</h1>
-  </header>
-  <section>
-   <h4>o nas</h4>
-   <p>tekst</p>
-  </section>
-  <section>
-   <h2>kontakt</h2>
-  </section>
- 
-<footer>stopka</footer>
- </nav>
+
+<nav>class= "menu nawigacyjne">
+   < ul class="menu-list">
+   <li><a href= header></a></li>
+   <li><a href= o nas></a></li>
+   <li><a href= kontakt></a></li>
+   <li><a href= footer></a></li>
+
+   
+<header id= "main"></header>
+<section id= "o nas"><p>tekst</p></section>
+<section id= "kontakt"></section>
+<footer id= "footer"></footer>
+
 </body>
 </html>
