--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
 
 <nav>class= "menu nawigacyjne">
-   < ul class="menu-list">
-   <li><a href= header></a></li>
-   <li><a href= o nas></a></li>
-   <li><a href= kontakt></a></li>
-   <li><a href= footer></a></li>
+   <ul class= "menu-list">
+      <li><a href= header></a></li>
+      <li><a href= o nas></a></li>
+      <li><a href= kontakt></a></li>
+      <li><a href= footer></a></li>
+   </ul>
+</nav>
 
+   
    
 <header id= "main"></header>
 <section id= "o nas"><p>tekst</p></section>
