--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-<nav>class= "menu nawigacyjne">
+<nav class= "menu nawigacyjne">
    <ul class= "menu-list">
       <li><a href= header></a></li>
-      <li><a href= o nas></a></li>
+      <li><a href= onas></a></li>
       <li><a href= kontakt></a></li>
       <li><a href= footer></a></li>
    </ul>
