struktura strony HTML5

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <nav class= "menu nawigacyjne">
    <ul class= "menu-list">
-      <li><a href= header></a></li>
-      <li><a href= onas></a></li>
-      <li><a href= kontakt></a></li>
-      <li><a href= footer></a></li>
+      <li><a href="header"></a></li>
+      <li><a href="onas"></a></li>
+      <li><a href="kontakt"></a></li>
+      <li><a href="footer"></a></li>
    </ul>
 </nav>
 
